--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <!-- bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     
+    <!-- aos ( animasi) -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+
+    <!-- my css -->
     <link rel="stylesheet" href="style.css">
 
 
@@ -38,6 +43,9 @@
               <a class="nav-link" href="#project">Project</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#gallery">Gallery</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
@@ -51,10 +59,10 @@
     <!-- khir navbar -->
 
     <!-- awal jumbo tron -->
-    <section class="jumbotron text-center">
-      <img src="./img/mee.jpg" alt="Darmanto" width="200" class="rounded-circle img-thumbnail"/>
+    <section class="jumbotron text-center" data-aos-anchor-placement="bottom-bottom">
+      <img src="./img/mee.jpg" alt="Darmanto" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4 fw-bold">CEO</h1>
-      <p class="lead">Woker | Someone who has high hopes and dreams.</p>
+      <p class="lead">Woker | Someone who has high hopes and dreams</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#778899" fill-opacity="1" d="M0,0L40,32C80,64,160,128,240,176C320,224,400,256,480,240C560,224,640,160,720,154.7C800,149,880,203,960,224C1040,245,1120,235,1200,224C1280,213,1360,203,1400,197.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
       </section>
     <!-- akhir jumbo tron -->
@@ -62,15 +70,15 @@
 
     <!-- about -->
     <section id="about" style="background-color: #778899;">
-      <div class="container text-center">
+      <div class="container text-center" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
         <div class="row">
           <div class="col">
             <h2>About Me</h2>
             <div class="row mt-3 justify-content-center">
-              <div class="col-md-5">
+              <div class="col-md-5" data-aos="fade-right" data-aos-delay="200">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut molestias, non inventore nulla commodi facilis? A expedita laborum maxime perspiciatis.</p>
               </div>
-              <div class="col-md-5">
+              <div class="col-md-5" data-aos="fade-left" data-aos-delay="400">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quis, illo corrupti, doloremque provident vitae odit, itaque incidunt optio quos a ab minus. Officia, voluptates harum exercitationem alias officiis quidem.</p>
               </div>
             </div>
@@ -79,13 +87,11 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#778899" fill-opacity="1" d="M0,192L48,170.7C96,149,192,107,288,122.7C384,139,480,213,576,213.3C672,213,768,139,864,138.7C960,139,1056,213,1152,224C1248,235,1344,181,1392,154.7L1440,128L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
     </section>
-
-
     <!-- akhir about -->
     
     <!-- awal project -->
       <section id="project">
-        <div class="container">
+        <div class="container" data-aos="fade-up">
           <div class="row text-center mb-3">
             <div class="col">
               <h2>My Projects</h2>
@@ -93,14 +99,14 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-md-4 mb-3">
-              <div class="card justify-content-center">
+              <div class="card" data-aos="flip-left" data-aos-duration='1000' data-aos-delay="300">
                 <img src="./img/projek1.jpg" class="card-img-top">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3">
+            <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration='1000' data-aos-delay="400">
               <div class="card">
                 <img src="./img/projek6.jpg" class="card-img-top">
                 <div class="card-body">
@@ -109,7 +115,7 @@
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
+              <div class="card" data-aos="flip-left" data-aos-duration='1000' data-aos-delay="500">
                 <img src="./img/projek3.png" class="card-img-top">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -117,14 +123,14 @@
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
+              <div class="card" data-aos="flip-left" data-aos-duration='1000' data-aos-delay="300">
                 <img src="./img/project7.PNG" class="card-img-top">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3">
+            <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration='1000' data-aos-delay="400">
               <div class="card">
                 <img src="./img/projek5.jpg" class="card-img-top">
                 <div class="card-body">
@@ -137,9 +143,69 @@
       </section>
     <!-- akhir project -->
 
+
+    <!-- gallery -->
+      <section id="gallery">
+        <div class="container" data-aos="fade-up">
+          <div class="row text-center mb-3">
+            <div class="col">
+              <h2>Gallery</h2>
+            </div>
+          </div>
+          <div class="row text-center justify-content-center">
+            <div class="col-md-3">
+              <a href="#">
+                <img src="./galery/g1.jpg" class="img-fluid gallery-img">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="./galery/g2.jpg" class="img-fluid gallery-img">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="./galery/g3.jpg" class="img-fluid gallery-img">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="./galery/g4.jpg" class="img-fluid gallery-img">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="./galery/g5.jpg" class="img-fluid gallery-img">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="./galery/g6.jpg" class="img-fluid gallery-img">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="./galery/g7.jpg" class="img-fluid gallery-img">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="./galery/g8.jpg" class="img-fluid gallery-img">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="./galery/g9.jpg" class="img-fluid gallery-img">
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+    <!-- akhir gallery -->
+
     <!-- awal contact -->
       <section id="contact" style="background-color: #778899;">
-        <div class="container">
+        <div class="container" data-aos="fade-up">
           <div class="row text-center mb-3">
             <div class="col">
               <h2>Contact</h2>
@@ -175,19 +241,19 @@
           </div>
           <div class="row text-center justify-content-center mt-5">
             <div class="col-md-2">
-              <i class="bi bi-instagram" style="font-size: 2rem; color: black;" ></a></i>
+              <i class="bi bi-instagram" style="font-size: 2rem; color: black;" data-aos="fade-up"></i>
               <p>Instagram</p>
             </div>
             <div class="col-md-2">
-              <i class="bi bi-twitter" style="font-size: 2rem; color: black;"></i>
+              <i class="bi bi-twitter" style="font-size: 2rem; color: black;" data-aos="fade-up" data-aos-delay="300"></i>
               <p>twitter</p>
             </div>
             <div class="col-md-2">
-              <i class="bi bi-facebook" style="font-size: 2rem; color: black;"></i>
+              <i class="bi bi-facebook" style="font-size: 2rem; color: black;" data-aos="fade-up" data-aos-delay="500"></i>
               <p>Fcebook</p>
             </div>
             <div class="col-md-2">
-              <i class="bi bi-whatsapp" style="font-size: 2rem; color: black;"></i>
+              <i class="bi bi-whatsapp" style="font-size: 2rem; color: black;" data-aos="fade-up" data-aos-delay="700"></i>
               <p>Whatsapp</p>
             </div>
           </div>
@@ -203,6 +269,34 @@
     <!-- akhir footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- javascript animasi aos -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      const galleryImage = document.querySelectorAll('.gallery-img');
+
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = 'zoom-in';
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
+      })
+      AOS.init();
+    </script>
+
+    <!-- animasi green shock -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to('.lead', {duration: 2, delay: 1.5, Text: "Woker | Someone who has high hopes and dreams" });
+      gsap.from('.jumbotron img', { duration: 1, y: -100, opacity: 0, ease: 'bounce'});
+      gsap.from('.navbar', {duration: 1.5, y: '-100%', opacity: 0});
+      gsap.from('.display-4', {duration: 1, x:-50, opacity: 0, delay: 0.5, ease: 'back'});
+    </script>
+
+
+  
+
 
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbzDdFywUK6Kbml0AhfkI1oQbv3MRi1F68wAQl3Fe9gS52RzEfhftbFD9S6sTPrsWGsWSw/exec'
