--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <!-- bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     
-    <!-- aos ( animasi) -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 
 
     <!-- my css -->
@@ -59,7 +58,7 @@
     <!-- khir navbar -->
 
     <!-- awal jumbo tron -->
-    <section class="jumbotron text-center" data-aos-anchor-placement="bottom-bottom">
+    <section class="jumbotron text-center" >
       <img src="./img/mee.jpg" alt="Darmanto" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4 fw-bold">CEO</h1>
       <p class="lead">Woker | Someone who has high hopes and dreams</p>
@@ -70,15 +69,15 @@
 
     <!-- about -->
     <section id="about" style="background-color: #778899;">
-      <div class="container text-center" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+      <div class="container text-center">
         <div class="row">
           <div class="col">
             <h2>About Me</h2>
             <div class="row mt-3 justify-content-center">
-              <div class="col-md-5" data-aos="fade-right" data-aos-delay="200">
+              <div class="col-md-5">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut molestias, non inventore nulla commodi facilis? A expedita laborum maxime perspiciatis.</p>
               </div>
-              <div class="col-md-5" data-aos="fade-left" data-aos-delay="400">
+              <div class="col-md-5">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quis, illo corrupti, doloremque provident vitae odit, itaque incidunt optio quos a ab minus. Officia, voluptates harum exercitationem alias officiis quidem.</p>
               </div>
             </div>
@@ -91,7 +90,7 @@
     
     <!-- awal project -->
       <section id="project">
-        <div class="container" data-aos="fade-up">
+        <div class="container">
           <div class="row text-center mb-3">
             <div class="col">
               <h2>My Projects</h2>
@@ -99,14 +98,14 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-md-4 mb-3">
-              <div class="card" data-aos="flip-left" data-aos-duration='1000' data-aos-delay="300">
+              <div class="card">
                 <img src="./img/projek1.jpg" class="card-img-top">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration='1000' data-aos-delay="400">
+            <div class="col-md-4 mb-3">
               <div class="card">
                 <img src="./img/projek6.jpg" class="card-img-top">
                 <div class="card-body">
@@ -115,7 +114,7 @@
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card" data-aos="flip-left" data-aos-duration='1000' data-aos-delay="500">
+              <div class="card">
                 <img src="./img/projek3.png" class="card-img-top">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -123,14 +122,14 @@
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card" data-aos="flip-left" data-aos-duration='1000' data-aos-delay="300">
+              <div class="card">
                 <img src="./img/project7.PNG" class="card-img-top">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration='1000' data-aos-delay="400">
+            <div class="col-md-4 mb-3">
               <div class="card">
                 <img src="./img/projek5.jpg" class="card-img-top">
                 <div class="card-body">
@@ -146,7 +145,7 @@
 
     <!-- gallery -->
       <section id="gallery">
-        <div class="container" data-aos="fade-up">
+        <div class="container">
           <div class="row text-center mb-3">
             <div class="col">
               <h2>Gallery</h2>
@@ -205,7 +204,7 @@
 
     <!-- awal contact -->
       <section id="contact" style="background-color: #778899;">
-        <div class="container" data-aos="fade-up">
+        <div class="container">
           <div class="row text-center mb-3">
             <div class="col">
               <h2>Contact</h2>
@@ -241,19 +240,19 @@
           </div>
           <div class="row text-center justify-content-center mt-5">
             <div class="col-md-2">
-              <i class="bi bi-instagram" style="font-size: 2rem; color: black;" data-aos="fade-up"></i>
+              <i class="bi bi-instagram" style="font-size: 2rem; color: black;"></i>
               <p>Instagram</p>
             </div>
             <div class="col-md-2">
-              <i class="bi bi-twitter" style="font-size: 2rem; color: black;" data-aos="fade-up" data-aos-delay="300"></i>
+              <i class="bi bi-twitter" style="font-size: 2rem; color: black;"></i>
               <p>twitter</p>
             </div>
             <div class="col-md-2">
-              <i class="bi bi-facebook" style="font-size: 2rem; color: black;" data-aos="fade-up" data-aos-delay="500"></i>
+              <i class="bi bi-facebook" style="font-size: 2rem; color: black;"></i>
               <p>Fcebook</p>
             </div>
             <div class="col-md-2">
-              <i class="bi bi-whatsapp" style="font-size: 2rem; color: black;" data-aos="fade-up" data-aos-delay="700"></i>
+              <i class="bi bi-whatsapp" style="font-size: 2rem; color: black;"></i>
               <p>Whatsapp</p>
             </div>
           </div>
@@ -270,34 +269,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <!-- javascript animasi aos -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      const galleryImage = document.querySelectorAll('.gallery-img');
 
-      galleryImage.forEach((img, i) => {
-        img.dataset.aos = 'zoom-in';
-        img.dataset.aosDelay = i * 100;
-        img.dataset.aosDuration = 1000;
-      })
-      AOS.init();
-    </script>
-
-    <!-- animasi green shock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/TextPlugin.min.js"></script>
-    <script>
-      gsap.registerPlugin(TextPlugin);
-      gsap.to('.lead', {duration: 2, delay: 1.5, Text: "Woker | Someone who has high hopes and dreams" });
-      gsap.from('.jumbotron img', { duration: 1, y: -100, opacity: 0, ease: 'bounce'});
-      gsap.from('.navbar', {duration: 1.5, y: '-100%', opacity: 0});
-      gsap.from('.display-4', {duration: 1, x:-50, opacity: 0, delay: 0.5, ease: 'back'});
-    </script>
-
-
-  
-
-
+    <!-- script form document -->
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbzDdFywUK6Kbml0AhfkI1oQbv3MRi1F68wAQl3Fe9gS52RzEfhftbFD9S6sTPrsWGsWSw/exec'
       const form = document.forms['Form-Contact-Pengunjungg']
