--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <!-- bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+    <!-- script Animasi AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     
-
-
-
     <!-- my css -->
     <link rel="stylesheet" href="style.css">
-
 
     <title>My Portfolio | Darmanto</title>
   </head>
@@ -24,7 +24,7 @@
 
     <!-- mulai navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary text-center shadow fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary text-center shadow fixed-top" data-aos="fade-down" data-aos-duration="1000">
       <div class="container">
         <a class="navbar-brand" href="#">My Portfolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,9 +59,9 @@
 
     <!-- awal jumbo tron -->
     <section class="jumbotron text-center" >
-      <img src="./img/mee.jpg" alt="Darmanto" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4 fw-bold">CEO</h1>
-      <p class="lead">Woker | Someone who has high hopes and dreams</p>
+      <img src="./img/mee.jpg" alt="Darmanto" width="200" class="rounded-circle img-thumbnail" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="400"/>
+      <h1 class="display-4 fw-bold" data-aos="fade-down-up" data-aos-duration="1000" data-aos-delay="500">CEO</h1>
+      <p class="lead" data-aos="fade-down-up" data-aos-duration="1000" data-aos-delay="600">Worker | people who have dreams and hopes that are too high.</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#778899" fill-opacity="1" d="M0,0L40,32C80,64,160,128,240,176C320,224,400,256,480,240C560,224,640,160,720,154.7C800,149,880,203,960,224C1040,245,1120,235,1200,224C1280,213,1360,203,1400,197.3L1440,192L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
       </section>
     <!-- akhir jumbo tron -->
@@ -69,16 +69,16 @@
 
     <!-- about -->
     <section id="about" style="background-color: #778899;">
-      <div class="container text-center">
+      <div class="container text-center" data-aos="fade-up" data-aos-duration="1000">
         <div class="row">
           <div class="col">
             <h2>About Me</h2>
-            <div class="row mt-3 justify-content-center">
-              <div class="col-md-5">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut molestias, non inventore nulla commodi facilis? A expedita laborum maxime perspiciatis.</p>
+            <div class="row mt-3 justify-content-center" data-aos="fade-right" data-aos-duration="1000">
+              <div class="col-md-4">
+                <p>Ini adalah Situs Website Portfolio yang berisikan informasi tentang project layout website yang dibuat, Coding, Gallery & berbagai kumpulan artikel menarik lainnya yang mudah-mudahan memberikan solusi dan bermanfaat bagi kita semua.</p>
               </div>
-              <div class="col-md-5">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quis, illo corrupti, doloremque provident vitae odit, itaque incidunt optio quos a ab minus. Officia, voluptates harum exercitationem alias officiis quidem.</p>
+              <div class="col-md-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300">
+                <p>When you want to give up, look at back and then see how far you have climbed to reach your goals.</p>
               </div>
             </div>
           </div>
@@ -90,50 +90,50 @@
     
     <!-- awal project -->
       <section id="project">
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-duration="1000">
           <div class="row text-center mb-3">
             <div class="col">
               <h2>My Projects</h2>
             </div>
           </div>
-          <div class="row justify-content-center">
+          <div class="row justify-content-center mt-5">
             <div class="col-md-4 mb-3">
-              <div class="card">
+              <div class="card" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="100">
                 <img src="./img/projek1.jpg" class="card-img-top">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Tampilan Layout Portfolio.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
+              <div class="card" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="200">
                 <img src="./img/projek6.jpg" class="card-img-top">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Tampilan Layout Sekolah.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
+              <div class="card" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="300">
                 <img src="./img/projek3.png" class="card-img-top">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Tampilan Layout Universitas.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
+              <div class="card" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="300">
                 <img src="./img/project7.PNG" class="card-img-top">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Tampilan Layout Perusahaan.</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
+              <div class="card" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="500">
                 <img src="./img/projek5.jpg" class="card-img-top">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Tampilan Layout Portfolio.</p>
                 </div>
               </div>
             </div>
@@ -146,7 +146,7 @@
     <!-- gallery -->
       <section id="gallery">
         <div class="container">
-          <div class="row text-center mb-3">
+          <div class="row text-center mb-5" data-aos="fade-up" >
             <div class="col">
               <h2>Gallery</h2>
             </div>
@@ -154,47 +154,47 @@
           <div class="row text-center justify-content-center">
             <div class="col-md-3">
               <a href="#">
-                <img src="./galery/g1.jpg" class="img-fluid gallery-img">
+                <img src="./galery/g1.jpg" class="img-fluid gallery-img" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="100">
               </a>
             </div>
             <div class="col-md-3">
               <a href="#">
-                <img src="./galery/g2.jpg" class="img-fluid gallery-img">
+                <img src="./galery/g2.jpg" class="img-fluid gallery-img" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="200">
               </a>
             </div>
             <div class="col-md-3">
               <a href="#">
-                <img src="./galery/g3.jpg" class="img-fluid gallery-img">
+                <img src="./galery/g3.jpg" class="img-fluid gallery-img" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="300">
               </a>
             </div>
             <div class="col-md-3">
               <a href="#">
-                <img src="./galery/g4.jpg" class="img-fluid gallery-img">
+                <img src="./galery/g4.jpg" class="img-fluid gallery-img" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="400">
               </a>
             </div>
             <div class="col-md-3">
               <a href="#">
-                <img src="./galery/g5.jpg" class="img-fluid gallery-img">
+                <img src="./galery/g5.jpg" class="img-fluid gallery-img" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="500">
               </a>
             </div>
             <div class="col-md-3">
               <a href="#">
-                <img src="./galery/g6.jpg" class="img-fluid gallery-img">
+                <img src="./galery/g6.jpg" class="img-fluid gallery-img" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="600">
               </a>
             </div>
             <div class="col-md-3">
               <a href="#">
-                <img src="./galery/g7.jpg" class="img-fluid gallery-img">
+                <img src="./galery/g7.jpg" class="img-fluid gallery-img" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="700">
               </a>
             </div>
             <div class="col-md-3">
               <a href="#">
-                <img src="./galery/g8.jpg" class="img-fluid gallery-img">
+                <img src="./galery/g8.jpg" class="img-fluid gallery-img" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="800">
               </a>
             </div>
             <div class="col-md-3">
               <a href="#">
-                <img src="./galery/g9.jpg" class="img-fluid gallery-img">
+                <img src="./galery/g9.jpg" class="img-fluid gallery-img" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="850">
               </a>
             </div>
           </div>
@@ -205,7 +205,7 @@
     <!-- awal contact -->
       <section id="contact" style="background-color: #778899;">
         <div class="container">
-          <div class="row text-center mb-3">
+          <div class="row text-center mb-3" data-aos="fade-up" data-aos-duration="1000">
             <div class="col">
               <h2>Contact</h2>
             </div>
@@ -217,19 +217,19 @@
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
               <form name="Form-Contact-Pengunjungg">
-                <div class="mb-3">
+                <div class="mb-3" data-aos="fade-down-right" data-aos-duration="1000" data-aos-delay="100">
                   <label for="nama" class="form-label">Nama Lengkap</label>
                   <input type="text" class="form-control" id="name" aria-describedby="name" name="nama">
                 </div>
-                <div class="mb-3">
+                <div class="mb-3" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="200">
                   <label for="exampleInputEmail1" class="form-label">Email</label>
                   <input type="email" class="form-control" id="email" aria-describedby="email" name="email">
                 </div>
-                <div class="mb-3">
+                <div class="mb-3" data-aos="fade-down-right" data-aos-duration="1000" data-aos-delay="300">
                   <label for="pesan" class="form-label">Pesan</label>
                   <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+                <button type="submit" class="btn btn-primary btn-kirim" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">Kirim</button>
 
                 <button class="btn btn-primary btn-loading d-none" type="button" disabled>
                   <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
@@ -239,20 +239,20 @@
             </div>
           </div>
           <div class="row text-center justify-content-center mt-5">
-            <div class="col-md-2">
-              <i class="bi bi-instagram" style="font-size: 2rem; color: black;"></i>
+            <div class="col-md-2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
+              <a href="www.instagram.com"><i class="bi bi-instagram" style="font-size: 2rem; color: black;"></i></a>
               <p>Instagram</p>
             </div>
-            <div class="col-md-2">
-              <i class="bi bi-twitter" style="font-size: 2rem; color: black;"></i>
+            <div class="col-md-2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+              <a href="www.twitter.com"><i class="bi bi-twitter" style="font-size: 2rem; color: black;"></i></a>
               <p>twitter</p>
             </div>
-            <div class="col-md-2">
-              <i class="bi bi-facebook" style="font-size: 2rem; color: black;"></i>
+            <div class="col-md-2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+              <a href="www.facebook.com"><i class="bi bi-facebook" style="font-size: 2rem; color: black;"></i></a>
               <p>Fcebook</p>
             </div>
-            <div class="col-md-2">
-              <i class="bi bi-whatsapp" style="font-size: 2rem; color: black;"></i>
+            <div class="col-md-2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+              <a href="https://api.whatsapp.com/send?phone=6281225739413"><i class="bi bi-whatsapp" style="font-size: 2rem; color: black;"></i></a>  
               <p>Whatsapp</p>
             </div>
           </div>
@@ -260,6 +260,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,64L48,101.3C96,139,192,213,288,218.7C384,224,480,160,576,154.7C672,149,768,203,864,202.7C960,203,1056,149,1152,122.7C1248,96,1344,96,1392,96L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
       </section>
     <!-- akhir contact -->
+
 
     <!-- awal footer -->
       <footer class="bg-primary text-white text-center pb-5">
@@ -269,12 +270,17 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  
+
 
     <!-- script form document -->
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbzDdFywUK6Kbml0AhfkI1oQbv3MRi1F68wAQl3Fe9gS52RzEfhftbFD9S6sTPrsWGsWSw/exec'
       const form = document.forms['Form-Contact-Pengunjungg']
-
       const btnKirim = document.querySelector('.btn-kirim');
       const btnLoading = document.querySelector('.btn-loading');
       const myAlert = document.querySelector('.my-alert')
